--- a/sass/style.scss
+++ b/sass/style.scss
@@ -18,8 +18,7 @@ body {
    flex-direction: column;
    align-items: center;
    .delivery__title {
-      font-size: 1.5rem;
-      font-size: clamp(1.5rem, 5vw, 2.25rem);
+      font-size: clamp(1.25rem, 5vw, 2.25rem);
       font-weight: $light;
       color: $veryDarkBlue;
       text-align: center;
@@ -112,4 +111,8 @@ body {
             }
         }
     }
+}
+
+@media screen and (max-width: 375) {
+   
 }
